changed styling and moved images

--- a/src/Components/elements/styles/form.css
+++ b/src/Components/elements/styles/form.css
@@ -3,7 +3,7 @@ body {
 
     font-family: 'Permanent Marker', cursive;
     font-size: 18px; 
-    background: url('https://media.istockphoto.com/vectors/pizza-seamless-pattern-background-vector-id917786268') repeat center center;
+    background: url("'https://www.freepik.com/free-photos-vectors/background'>Background photo created by freepik - www.freepik.com") ;
     background-attachment: fixed;
 }
 .container{
@@ -17,10 +17,10 @@ body {
 	max-width: 75%;
 	margin: 10px auto;
 	padding: 16px;
-	background: #FDE056;
+	background: #807d6e;
 }
 .form-style-6 h1{
-	background: #53A35C;
+	background: #a32f2f;
 	padding: 20px 0;
 	font-size: 140%;
 	font-weight: 300;
@@ -86,7 +86,7 @@ body {
 }
 .form-style-6 input[type="submit"]:hover,
 .form-style-6 input[type="button"]:hover{
-	background: #2EBC99;
+	background: #a32f2f;
 }
 
 /* Errors */
@@ -104,7 +104,7 @@ h1 {
     font-size: 30px;
     padding: 20px;
     text-align: center;
-    background: #53A35C;
+    background: #a32f2f;
 }
 
 .nav-links a {
